--- a/singolo3.css
+++ b/singolo3.css
@@ -85,9 +85,14 @@ body {
 
 .get-a-quote {
   background-color: #f06c64;
-  padding-bottom: 36px;
+  /* padding-bottom: 36px; */
   border-bottom: 5px solid #ea676b;
 }
+
+.get-a-quote .services-wrapper {
+  padding-bottom: 13px;
+}
+
 
 .contact-info p {
   margin-top: 10px;
@@ -109,6 +114,7 @@ body {
 
 .contact-form > * {
   display: block;
+  /* color: #f48c8f; */
 }
 
 .contact-info p  {
@@ -120,7 +126,11 @@ body {
 
 input, textarea {
   margin-bottom: 16px;
+  max-height: 202px;
+  resize: none;
+  font-family: "Lato", "Arial", sans-serif;
 }
+
 
 input, textarea {
   border: none;
@@ -135,9 +145,24 @@ input, textarea {
   line-height: 14px;
 }
 
+
+.contact-form button {
+  padding: 12px 14px 10px;
+  width: initial;
+  background-color: transparent;
+  color: #f0d8d9;
+  border: 1px solid #f0d8d9;
+}
+
 .contact-form-submit {
   width: 150px;
+  margin-bottom: 0px;
 
+}
+
+.contact-form-submit:hover {
+ cursor: pointer;
+ opacity: 0.5;
 }
 
 .contact {
@@ -167,6 +192,25 @@ input, textarea {
 .contact .contact-email {
   background: transparent url("assets/icon-email.svg") no-repeat 1px 7px;
 }
+
+
+.footer {
+  background-color: #2d303a;
+  padding-top: 22px;
+  padding-bottom: 19px;
+}
+
+.footer .wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer .copyright p {
+  color: #666d89;
+  font-size: 12px;
+}
+
 
 /* Icons */
 
@@ -201,3 +245,10 @@ input, textarea {
 	border-radius: 50%;
 	margin-right: 5px;
 }
+
+.footer .social-icons .icon  {
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-left: 5px;
+}
+
